07-ingress/manifests/apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-a
  namespace: demo
spec:
  replicas: 2
  selector:
    matchLabels: {app: app-a}
  template:
    metadata:
      labels: {app: app-a}
    spec:
      containers:
        - name: echo
          image: hashicorp/http-echo:1.0
          args: ["-text=Soy la APP A", "-listen=:5678"]
          ports: [{containerPort: 5678}]
---
apiVersion: v1
kind: Service
metadata:
  name: app-a
  namespace: demo
spec:
  selector: {app: app-a}
  ports: [{port: 80, targetPort: 5678}]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-b
  namespace: demo
spec:
  replicas: 2
  selector:
    matchLabels: {app: app-b}
  template:
    metadata:
      labels: {app: app-b}
    spec:
      containers:
        - name: echo
          image: hashicorp/http-echo:1.0
          args: ["-text=Soy la APP B", "-listen=:5678"]
          ports: [{containerPort: 5678}]
---
apiVersion: v1
kind: Service
metadata:
  name: app-b
  namespace: demo
spec:
  selector: {app: app-b}
  ports: [{port: 80, targetPort: 5678}]
